--- a/app/src/main/res/layout/activity_show_employee.xml
+++ b/app/src/main/res/layout/activity_show_employee.xml
@@ -7,10 +7,14 @@
     android:orientation="vertical"
     tools:context=".ShowEmployeeActivity">
 
-    <ListView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lstEmployee"
-        />
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerView"/>
+    </ScrollView>
 
 </LinearLayout>
