--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,9 +22,18 @@
         android:text="Search Employee"
         android:textSize="20sp"
         />
-    <ListView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lstEmployee"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvData"
+            android:textSize="20sp"/>
+
+
+    </ScrollView>
+
 
 </LinearLayout>
