--- a/app/src/main/res/layout/activity_update_or_delete.xml
+++ b/app/src/main/res/layout/activity_update_or_delete.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Search Employee"
-        android:id="@+id/etEmployee"
+        android:id="@+id/etEmployeed"
         android:textSize="25sp"
         />
 
@@ -26,7 +26,7 @@
 
 
     <EditText
-        android:id="@+id/etName"
+        android:id="@+id/etNamed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -36,7 +36,7 @@
 
 
     <EditText
-        android:id="@+id/etSalary"
+        android:id="@+id/etSalaryd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -45,7 +45,7 @@
         />
 
     <EditText
-        android:id="@+id/etAge"
+        android:id="@+id/etAged"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
